--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap 4 starter</title>
+  <title>ХДМ-Сервис. Плазменная резка металла. Производство металлических конструкций</title>
 </head>
 <body>
 
@@ -62,7 +62,9 @@
                <div class="slider-box">
                  <strong>Порошково полимерная окраска</strong>
                  <p class="mt-4">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, iusto ducimus provident incidunt quod quaerat hic recusandae voluptatem esse cumque, veniam quos eos repudiandae, alias officia deserunt iste corporis.
+                   Высокотехнологичная экологически чистая покраска металлоизделий.<br/>
+                   Две камеры в разных частях города - на Парнасе и в Лигово. <br/>
+                   Быстрое и качественное исполнение заказов
                    </p>
                    <a href="#section-coating" class="btn btn-success">
                      Узнать Подробности
@@ -80,7 +82,10 @@
                <div class="slider-box">
                  <strong>Изготовление металлоконструкций</strong>
                  <p class="mt-4">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, iusto ducimus provident incidunt quod quaerat hic recusandae voluptatem esse cumque, veniam quos eos repudiandae, alias officia deserunt iste corporis.
+              По чертежам или эскизам, быстро, качественно изготовим металлоконструкции. <br/>
+              Перил, ограждений, навесов, скамеек, каркасных домов на основе.<br/>
+              Следим за соблюдением сроков.
+
                    </p>
                    <a href="#section-metalware" class="btn btn-success">
                      Узнать Подробности
@@ -98,7 +103,8 @@
                <div class="slider-box">
                  <strong>Плазменная резка металла</strong>
                  <p class="mt-4">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, iusto ducimus provident incidunt quod quaerat hic recusandae voluptatem esse cumque, veniam quos eos repudiandae, alias officia deserunt iste corporis.
+                   Обработка листового металла плазменной резкой. Быстрый и точный способ резки, <br/>без лишних нагрузок на металл.
+                  <br/>Существенно дешевле лазерной резки.
                    </p>
                    <a href="#section-plazma-cutting" class="btn btn-success">
                      Узнать Подробности
@@ -119,21 +125,25 @@
           <div class="plus-box">
               <i class="fa fa-thumbs-up mb-3"></i>
               <h3 class="h4 mb-3">Выгодная Цена</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae maiores veritatis beatae, dignissimos soluta at maxime odit reiciendis porro laborum.</p>
+              <p>
+              Мы стараемся сделать наши цены доступными и удобными для наших клиентов. Мы хотимм работать с вами постоянно и подвержаем это выгодными ценами.
+              </p>
           </div>
         </div>
         <div class="col-md-4 text-center">
           <div class="plus-box">
               <i class="fa fa-fighter-jet mb-3"></i>
               <h3 class="h4 mb-3">Гарантия Качества</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae maiores veritatis beatae, dignissimos soluta at maxime odit reiciendis porro laborum.</p>
+              <p>
+                Мы гарантируем качество продукции. Мы уверены в себе благодаря совеменному оборудованию и постоянному контролю качества.
+              </p>
           </div>
         </div>
         <div class="col-md-4 text-center">
           <div class="plus-box">
               <i class="fa fa-clock mb-3"></i>
               <h3 class="h4 mb-3">Точно в Срок</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae maiores veritatis beatae, dignissimos soluta at maxime odit reiciendis porro laborum.</p>
+              <p>Мы заботимся о выполнении работ точно в срок. Работая с нами, вы можете быть уверенны в точных сроках выполнения заказов.</p>
           </div>
         </div>
       </div>
@@ -146,11 +156,23 @@
         <div class="col-md-8">
         <h2 class="font-weight-bold text-muted mb-5 text-center">О Нас</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum blanditiis dolorum dolorem dolore non ex, explicabo, illo dolores totam consequuntur aliquid sapiente? Vitae rerum saepe hic ipsa fugit dignissimos voluptatum? Molestias laboriosam iste, neque iusto. Molestiae corporis vero assumenda voluptas! Asperiores fugiat quos magnam optio dolor unde facilis, voluptatem quia.
+         Прозводственная компания ООО "ПФ ХДМ СЕРВИС" работает для вас с 1999 года.
+         Основные виды деятельности
+         <ul>
+           <li>порошковая окраска</li>
+            <li>плазменная резка металла</li>
+            <li>производство металлических конструкций</li>
+            <li>полиуретановых композиций  (СКУ ПФЛ-100,  ЛИТУРЕН, ТРИФОР, АНТИКОР и др.)</li>
+         </ul>
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum blanditiis dolorum dolorem dolore non ex, explicabo, illo dolores totam consequuntur aliquid sapiente? Vitae rerum saepe hic ipsa fugit dignissimos voluptatum? Molestias laboriosam iste, neque iusto. Molestiae corporis vero assumenda voluptas! Asperiores fugiat quos magnam optio dolor unde facilis, voluptatem quia.
-        </p>
+        <dl>
+          <dt>Структура организации:</dt>
+          <dd>три  производственных участка и научно-исследовательская лаборатория</dd>
+          <dt>Количество сотрудников</dt>
+          <dd>70 человек, в том числе высококвалифицированные специалисты, кандидаты наук</dd>
+          <dt>Клиенты</dt>
+          <dd>более 200 предприятий России</dd>
+        </dl>
         <div class="row mt-5">
           <div class="col-md-4">
             <a href="#section-coating" class="btn btn-success d-block">
@@ -186,19 +208,19 @@
         <div class="col-md-4">
           <div class="why-coating-box">
             <i class="fa fa-check-circle"></i>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio laudantium, totam deleniti minus perferendis, sint.
+            Современная, экологически чистая технология получения покрытий высокого качества.
           </div>
           <div class="why-coating-box">
             <i class="fa fa-check-circle"></i>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio laudantium, totam deleniti minus perferendis, sint.
+            Быстро. Покрытие высыхает быстро и позволяет значительно сэкономить время производства.
           </div>
           <div class="why-coating-box">
             <i class="fa fa-check-circle"></i>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio laudantium, totam deleniti minus perferendis, sint.
+            Порошково-полимерная окраска имеет более 5000 тысяч цветов и оттенков.
           </div>
           <div class="why-coating-box">
             <i class="fa fa-check-circle"></i>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio laudantium, totam deleniti minus perferendis, sint.
+            Покрытия обладают очень высокой износостойкостью и устойчивостью к перепадам температур, истиранию и агрессивным условиям.
           </div>
         </div>
         <div class="col-md-7 offset-md-1">
@@ -206,12 +228,14 @@
               <div class="col-md-6">
                 <div class="area-box">
                   <h4 class="text-white h6 text-center pt-1">СПБ - ЮГ (Лигово)</h4>
+                  <p class="text-white text-center mt-0">Размеры камеры 800*1800*1400 мм </p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d128150.50355558883!2d30.241294561759027!3d59.87651167669607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x46963110686a7c55%3A0xa2950fb15748e884!2z0JTQstC-0YDRhtC-0LLQsNGPINC_0LvQvtGJ0LDQtNGMLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsw!3m2!1d59.938942!2d30.314987499999997!4m5!1s0x46963b8148c51567%3A0x8089874dcdc57ade!2z0KDQsNCx0L7Rh9Cw0Y8g0YPQuy4sIDMsINCh0YLQsNGA0L4t0J_QsNC90L7QstC-LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk4MjA1!3m2!1d59.8143393!2d30.1670552!5e0!3m2!1sru!2sru!4v1523919863902" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="area-box">
                   <h4 class="text-white h6 text-center pt-1">СПБ - СЕВЕР (Парнас)</h4>
+                  <p class="text-white text-center mt-0">Размеры камеры 8000*2100*1600 мм </p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d127642.6482927521!2d30.239795767470266!3d60.00817098856863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x46963110686a7c55%3A0xa2950fb15748e884!2z0JTQstC-0YDRhtC-0LLQsNGPINC_0LvQvtGJ0LDQtNGMLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsw!3m2!1d59.938942!2d30.314987499999997!4m5!1s0x4697cb33ce46a459%3A0x5320afe6fd3c5fc3!2zNS3QuSDQktC10YDRhdC90LjQuSDQv9C10YAuLCAxOSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5NDI5Mg!3m2!1d60.0737211!2d30.356233!5e0!3m2!1sru!2sru!4v1523920175650" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
@@ -291,7 +315,7 @@
   <section id="section-plazma-cutting" class="py-5 mt-5 section">
     <div class="container">
       <h2 class="text-center font-weight-bold text-muted mb-5">Плазменная резка металла</h2>
-      <p class="text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab iure impedit inventore et beatae, repellat animi praesentium adipisci nisi. Tempore unde libero nobis repellendus sapiente praesentium blanditiis, sint error, odit quis quia eius porro esse, suscipit omnis ut quidem id aliquid aliquam! Error, nesciunt! Esse ipsa modi dolor qui, quos?</p>
+      <p class="text-center mb-5">Современная технология металлобработки. Обработка металла производится разрезанием<br/> с помощью потока раскаленного ионизированного газа. </p>
       <div class="row">
         <div class="col-md-6">
             <div class="plazma-box">
@@ -300,7 +324,7 @@
               </div>
               <div class="text-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ipsam nihil odit cupiditate quos iusto distinctio ipsa amet quidem ullam?
+                Нагрев металла происходит только в зоне воздействия плазмы, что исключает деформации изделия и другие последствия тепловых напряжений.
                 </p>
               </div>
             </div>
@@ -310,7 +334,7 @@
               </div>
               <div class="text-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ipsam nihil odit cupiditate quos iusto distinctio ipsa amet quidem ullam?
+                  Производит качественный, очень акуратный и чистый распил. Минимальная шероховатость в месте разреза. Подходит для работы с деталями небольших размеров.<br/>
                 </p>
               </div>
             </div>
@@ -320,7 +344,7 @@
               </div>
               <div class="text-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ipsam nihil odit cupiditate quos iusto distinctio ipsa amet quidem ullam?
+                  Плазменной резкой можно обрабатывать практически любой металл. Плазменная резка универсальна - сталь, титан, чугун, медь, различные сплавы.
                 </p>
               </div>
             </div>
@@ -336,19 +360,67 @@
   <section id="section-footer" class="pt-5 mt-5 section">
     <div class="container">
       <h2 class="text-center font-weight-bold text-white mt-3 mb-5">Наши Контакты</h2>
-      <div class="row">
+      <div class="row text-white text-center mb-4">
+          <div class="col-md-3 mb-3">
+            <a href="tel: +79119866184">
+            <div class="card bg-success py-4 px-2">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <h3 class="h6 mt-3">Воронов Станислав Евгеньевич</h3>
+              <b>полиуретановые полимеры</b>
+              <b class="d-block mt-2">+79119866184</b>
+            </div>
+            </a>
+          </div>
+          <div class="col-md-3 mb-3">
+            <a href="tel: +79118484180">
+            <div class="card bg-success py-4 px-2">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <h3 class="h6 mt-3">Хохлунов Сергей Владимирович</h3>
+              <b>покраска Парнас</b>
+              <b class="d-block mt-2">+79118484180</b>
+            </div>
+            </a>
+          </div>
+          <div class="col-md-3 mb-3">
+            <a href="tel: +79219346733">
+            <div class="card bg-success py-4 px-2">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <h3 class="h6 mt-3">Пантелеев Сергей Владимирович</h3>
+              <b> покраска Лигово</b>
+              <b class="d-block mt-2">+79219346733</b>
+            </div>
+            </a>
+          </div>
+          <div class="col-md-3 mb-3">
+            <a href="tel:+79219548196">
+            <div class="card bg-success py-4 px-2">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <h3 class="h6 mt-3">Субачев Дмитрий Викторович</h3>
+              <b>плазма и изготовление металлоконструкций</b>
+              <b class="d-block mt-2">+79219548196</b>
+            </div>
+            </a>
+          </div>
+      </row>
+      <div class="row pt-4">
         <div class="col-md-5">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad quis sequi accusantium corrupti consequatur, aspernatur modi natus, ea sint, possimus et ducimus numquam, provident minus. Aliquam excepturi repellat maiores saepe?
+            <b>Адреса наших производственных площадок:</b>
+            <ul class="text-white text-left">
+              <li>Россия, Санкт-Петербург, Старо-Паново, ул. Рабочая, д.3.</li>
+              <li>Россия, Санкт-Петербург, промзона Парнас, 5-ый Верхний пер., дом 19.</li>
+              <li>Россия, Гатчина, промзона ДСК 3. </li>
+              <li>Россия, Луга промзона Химик</li>
+            </ul>
           </p>
           <p>
-            59658 Lorem ipsum dolor sit amet.
+            <b>Почтовый адрес:</b> 198152, Россия, Санкт-Петербург, пр. Стачек, дом 74/1 оф. 72
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur.
+            <b>Телефоны офиса:</b> +7(911)986-61-84, +7(921)934-67-33
           </p>
           <p>
-            Tel ph :+12 852 6985 542
+            <b>Телефоны производства:</b> +7 (911) 986-61-84, +7(921)934-67-33 (Лигово), +7(911)848-41-80 (Парнас)
           </p>
         </div>
         <div class="col-md-7">
@@ -372,7 +444,7 @@
             </div>
             <div class="form-group row">
               <div class="col">
-                <textarea name="name" rows="5" class="w-100" class="form-control" placeholder="   Ваше сообщение"></textarea>
+                <textarea name="name" rows="8" class="w-100" class="form-control" placeholder="   Ваше сообщение"></textarea>
               </div>
             </div>
           </form>
